--- a/index.html
+++ b/index.html
@@ -624,7 +624,6 @@
             '10-minutes-till-dawn',
             '1v1-lol',
             '2048',
-            'abandoned',
             'abandoned-2',
             'a-dark-room',
             'ages-of-conflict',
@@ -643,14 +642,15 @@
             'breaklock',
             'chrome-dino',
             'clicker-heroes',
-            'clone-armies',
-            'conways-game-of-life',
             'cookie-clicker',
             'core-ball',
             'crazy-chicken-3d',
             'crazy-kitty-3d',
             'crossy-road',
             'cut-the-rope',
+            'dadish',
+            'dadish-2',
+            'dadish-3',
             'doge-miner',
             'doodle-jump',
             'doom',
@@ -658,6 +658,8 @@
             'drive-mad',
             'drive-mad-s',
             'dune',
+            'eaglercraft',
+            'eaglercraftx',
             'eggy-car',
             'evowars',
             'family-feud',
@@ -676,15 +678,12 @@
             'hextris',
             'idle-breakout',
             'idle-dice',
-            'incremancer',
-            'maptroid',
             'mario-game',
             'monkey-mart',
             'motox3m',
             'moto-x3m-pool-party',
             'n-gon',
             'n-step-steve-part-2',
-            'ovo',
             'particle-clicker',
             'pcraft',
             'planet-life',
@@ -697,21 +696,14 @@
             'retro-bowl',
             'retro-bowl-old',
             'rift-shift',
-            'rocket-league-2d',
             'rooftop-snipers',
             'rookie-bowman',
-            'run',
-            'run-2',
-            'run-3',
-            'run-3-beta',
             'sandspiel',
             'scuba-bear',
             'shadow-fight',
             'slice-master',
             'slope',
             'slope-plus',
-            'smart-ball',
-            'smash-karts',
             'soccer-random',
             'stickman-hook',
             'subway-surfers',
@@ -724,16 +716,13 @@
             'tiny-fishing',
             'tunnel-rush',
             'two-ball-3d',
-            'undertale-yellow',
             'vex-3',
             'vex-4',
             'vex-5',
             'vex-6',
             'vex-7',
             'volley-random',
-            'web-osu',
             'where-is-the-water',
-            'worldbox',
             'x-trench-run',
             'yohoho'
         ];
